fix date not showing in events

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -25,6 +25,10 @@
         mat-icon {
           margin-right: 5px;
         }
+
+        &.disable {
+          opacity: 40% !important;
+        }
       }
     }
   
